--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head></head>
-  <body>
-    
-  </body>
+    <body>
+      <script>
+        
+        console.log(Math.pow (4,2));
+
+      </script>
+    </body>
 </html>
