--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <body>
       <script>
         
-        console.log(Math.pow (4,3));
+        console.log(Math.abs(-18));
 
       </script>
     </body>
