--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head></head>
     <body>
       <script>
-                console.log(Math.abs(-18));
+        function plusing (dig1,dig2){
+            console.log(dig1+dig2);
+        }
+        plusing(43,5);
       </script>
     </body>
 </html>
