--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head></head>
     <body>
       <script>
-        function plusing (dig1,dig2){
-            console.log(dig1+dig2);
+        const printMotto = () => {
+          const text = "Winter is coming.";
+          console.log(text);
         }
-        plusing(43,5);
+        printMotto();
       </script>
     </body>
 </html>
