--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head></head>
     <body>
       <script>
-        const printMotto = () => {
-          const text = "Winter is coming.";
-          console.log(text);
-        }
-        printMotto();
+       const printJamiesLine = (text) => {
+        console.log(`JAMIE: ${text}`);
+       };
+       printJamiesLine('nigga');
       </script>
     </body>
 </html>
