--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head></head>
     <body>
       <script>
-       const printJamiesLine = (text) => {
-        console.log(`JAMIE: ${text}`);
+       const multiply = (arg1,arg2) => {
+        console.log(arg1*arg2);
        };
-       printJamiesLine('nigga');
+       multiply(4,10);
       </script>
     </body>
 </html>
