--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head></head>
     <body>
       <script>
-       const multiply = (arg1,arg2) => {
-        console.log(arg1*arg2);
-       };
-       multiply(4,10);
+       const sum = (p1,p2) => {
+         return p1+p2;
+       }
+       const result = sum(10,7);
+       console.log(result);
       </script>
     </body>
 </html>
